{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 266,
  "lineage": "332941a2-882f-5fcb-40d2-4bf82e243b19",
  "resources": [
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382834060:internet-gateway/igw-06a0d868994de438f",
            "id": "igw-06a0d868994de438f",
            "owner_id": "992382834060",
            "vpc_id": "vpc-0fd1acb6deda76771"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382834060:route-table/rtb-0adde91cb0f6cc6da",
            "id": "rtb-0adde91cb0f6cc6da",
            "owner_id": "992382834060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a0d868994de438f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fd1acb6deda76771"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3c7be9f8c4170f4",
            "route_table_id": "rtb-0adde91cb0f6cc6da",
            "subnet_id": "subnet-0f40b5ab523c4427b"
          },
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_route_table.pubrt",
            "module.clustering.aws_subnet.pubsub01",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f2e13c903a473f",
            "route_table_id": "rtb-0adde91cb0f6cc6da",
            "subnet_id": "subnet-0382221f936a0498b"
          },
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_route_table.pubrt",
            "module.clustering.aws_subnet.pubsub02",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382834060:security-group/sg-035d76a8df804c20c",
            "description": "This is to allow server to outside",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035d76a8df804c20c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devsgforkube",
            "name_prefix": "",
            "owner_id": "992382834060",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fd1acb6deda76771"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382834060:subnet/subnet-0f40b5ab523c4427b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f40b5ab523c4427b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382834060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pubsub01"
            },
            "tags_all": {
              "Name": "dev-pubsub01"
            },
            "vpc_id": "vpc-0fd1acb6deda76771"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382834060:subnet/subnet-0382221f936a0498b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0382221f936a0498b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382834060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pubsub02"
            },
            "tags_all": {
              "Name": "dev-pubsub02"
            },
            "vpc_id": "vpc-0fd1acb6deda76771"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382834060:vpc/vpc-0fd1acb6deda76771",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ef7cd26df3bc5699",
            "default_route_table_id": "rtb-0eb1b2cd840596d57",
            "default_security_group_id": "sg-0fce447b55c7a8189",
            "dhcp_options_id": "dopt-0ca71a041502df81d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd1acb6deda76771",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb1b2cd840596d57",
            "owner_id": "992382834060",
            "tags": {
              "Name": "dev-eks-vpc"
            },
            "tags_all": {
              "Name": "dev-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}